// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.CookiesInfo chapterLevel 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 2`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 3`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 4`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 5`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 6`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 7`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 8`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 9`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 10`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 11`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 12`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 13`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel 14`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo className 1`] = `
<Section
  className="uu5-bricks-cookies-info my-classname"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo controlled 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo controlled 2`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo controlled 3`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo controlled 4`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo data 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header="Cookies Info Header"
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
>
  <Row
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    display="standard"
    dynamic={false}
    footer={null}
    header="Chapter header "
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key="0"
    level={2}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  >
    <P
      className={null}
      content="chapter line of text"
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      key="0"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
    <P
      className={null}
      content="chapter line of text"
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      key="1"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  </Row>
</Section>
`;

exports[`UU5.Bricks.CookiesInfo default props 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo disabled 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo disabled 2`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo disabled 3`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo disabled 4`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo docKit example UU5.Bricks.CookiesInfo should render without crash 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
>
  <Row
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    display="standard"
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key="0"
    level={4}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  >
    <P
      className={null}
      content="Cookie je krátký textový soubor, který navštívená webová stránka odešle do prohlížeče. Umožňuje webu zaznamenat informace o vaší návštěvě, například preferovaný jazyk a další nastavení. Příští návštěva stránek tak může být snazší a produktivnější. Soubory cookie jsou důležité. Bez nich by procházení webu bylo mnohem složitější."
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      key="0"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
    <P
      className={null}
      content="Soubory cookie slouží k celé řadě účelů. Používáme je například ke sledování počtu návštěvníků na stránce, k usnadnění registrace nových služeb, k výběru relevantních reklam, k ochraně vašich dat, aj."
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      key="1"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  </Row>
  <Row
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    display="standard"
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key="1"
    level={4}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  >
    <P
      className={null}
      content="Při zpracování těchto souborů důsledně dbáme na ochranu vašeho soukromí a vždy postupujeme v souladu s příslušnými právními předpisy a etickými standardy. Veškeré získané údaje chráníme za použití těch nejmodernějších technologií, a dalším osobám či firmám je sdělujeme pouze v nezbytně nutném rozsahu, vyjma případů, kdy nám poskytnutí osobních údajů může uložit zákon."
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      key="0"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  </Row>
  <Row
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    display="standard"
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    key="2"
    level={4}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  >
    <P
      className={null}
      content="Ano, stačí, když si před návštěvou našich stránek ve svém prohlížeči spustíte funkci anonymního prohlížení. V takovém případě je ale možné, že se vám některé části našich stránek nebudou zobrazovat správně a jejich prohlížení pro vás může být složitější."
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      key="0"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  </Row>
</Section>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={0}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 2`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 3`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 4`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={2}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 5`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={2}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 6`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={3}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 7`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={3}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 8`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={4}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 9`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={4}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 10`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={5}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 11`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={5}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 12`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={6}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 13`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={6}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel 14`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={5}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo hidden 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo hidden 2`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo hidden 3`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo hidden 4`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo id 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="myId-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo mainAttrs 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo name 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 2`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 3`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 4`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 5`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 6`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 7`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 8`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 9`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 10`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 11`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 12`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 13`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 14`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 15`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 16`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 17`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 18`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 19`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel 20`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo noIndex 1`] = `
<Section
  className="uu5-bricks-cookies-info uu5-noindex"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo noIndex 2`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo noIndex 3`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo noIndex 4`] = `
<Section
  className="uu5-bricks-cookies-info uu5-noindex"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo pureRender 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo pureRender 2`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo pureRender 3`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo pureRender 4`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo selected 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo selected 2`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo selected 3`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo selected 4`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo style 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo style 2`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo style 3`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo style 4`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.CookiesInfo tooltip 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  colorSchema={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip="My Tooltip"
  underline={false}
/>
`;
